<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.soham.popularmovies.MainActivity">

        <ImageView
            android:id="@+id/pm_image_poster"
            style="@style/ImageViewStyle"
            android:contentDescription="@string/movie_poster"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/pm_movie_title"
            style="@style/TextViewStyle"
            android:layout_toRightOf="@+id/pm_image_poster"
            android:textStyle="bold"
            tools:text="@string/movie_title" />

        <TextView
            style="@style/StaticMovieDetailText"
            android:layout_below="@+id/pm_movie_title"
            android:layout_toRightOf="@id/pm_image_poster"
            android:text="@string/static_release_date_text"
            android:textColor="@color/releaseStaticTextColor" />

        <TextView
            android:id="@+id/pm_release_date"
            style="@style/TextViewStyle"
            android:layout_below="@+id/pm_movie_title"
            android:layout_toRightOf="@+id/pm_image_poster"
            tools:text="@string/movie_date" />

        <TextView
            style="@style/StaticMovieDetailText"
            android:layout_below="@+id/pm_release_date"
            android:layout_toRightOf="@id/pm_image_poster"
            android:text="@string/static_rating_text"
            android:textColor="@color/ratingStaticTextColor" />

        <TextView
            android:id="@+id/pm_movie_rating"
            style="@style/TextViewStyle"
            android:layout_below="@+id/pm_release_date"
            android:layout_toRightOf="@+id/pm_image_poster"
            tools:text="@string/movie_rating" />

        <TextView
            android:id="@+id/pm_out_of_rating"
            style="@style/OutOfRatingStyle"
            android:layout_below="@+id/pm_release_date"
            android:layout_toRightOf="@+id/pm_movie_rating"
            android:text="@string/out_of_rating" />

        <Button
            android:id="@+id/pm_fav_button"
            style="@style/FavoriteButtonStyle"
            android:layout_below="@+id/pm_movie_rating"
            android:layout_toRightOf="@+id/pm_image_poster"
            android:drawableLeft="@drawable/ic_favorite_border_white_24dp"
            android:text="@string/favorite_button_text" />

        <Button
            android:id="@+id/trailer_button"
            style="@style/TrailerButtonStyle"
            android:layout_below="@id/pm_image_poster"
            android:text="@string/trailer_button_text" />

        <TextView
            android:id="@+id/pm_movie_plot"
            style="@style/PlotTextViewStyle"
            android:layout_below="@+id/trailer_button"
            tools:text="@string/movie_plot" />

        <TextView
            android:id="@+id/read_more_text_view"
            style="@style/ReadMoreTextStyle"
            android:layout_below="@id/pm_movie_plot"
            android:text="@string/movie_plot_read_more_text" />

        <TextView
            android:id="@+id/pm_reviews_title"
            style="@style/ReviewsTitleText"
            android:layout_below="@+id/pm_movie_plot"
            android:text="@string/reviews_title_text" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pm_reviews_title">

            <ProgressBar
                android:id="@+id/loading_reviews"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/pm_movie_reviews"
                style="@style/PlotTextViewStyle"
                android:layout_below="@+id/pm_reviews_title"
                tools:text="@string/movie_reviews" />
        </FrameLayout>

    </RelativeLayout>

</ScrollView>